-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.5.0-beta1
-
None
-
Nexus 7 v2 (6.0.1), macOS 10.11, Android ndk r10e, Android SDK toosl 25.2.5
-
83ff62aa13512b0a8f9f46e4eb7d1a7d5745d0fb
Qt Creator is unable to connect to the debug session on the device, works fine with Qt Creator 4.4.1 and same version of Qt (all from the same package, Qt 5.10 Beta 3)
Tested with multiple Qt examples.
Application Output:
Debugging starts I art : Late-enabling -Xcheck:jni W System : ClassLoader referenced unknown path: I QtCore : Start W linker : /data/app/org.qtproject.example.collidingmice-2/lib/arm/libQt5Gui.so: unused DT entry: type 0x1d arg 0x55743 W linker : /data/app/org.qtproject.example.collidingmice-2/lib/arm/libQt5Gui.so: unsupported flags DT_FLAGS_1=0x81 W linker : /data/app/org.qtproject.example.collidingmice-2/lib/arm/libQt5Widgets.so: unused DT entry: type 0x1d arg 0x6d00c W linker : /data/app/org.qtproject.example.collidingmice-2/lib/arm/libQt5Widgets.so: unsupported flags DT_FLAGS_1=0x81 W linker : /data/data/org.qtproject.example.collidingmice/qt-reserved-files/plugins/platforms/android/libqtforandroid.so: unused DT entry: type 0x1d arg 0x8ba8 W linker : /data/data/org.qtproject.example.collidingmice/qt-reserved-files/plugins/platforms/android/libqtforandroid.so: unsupported flags DT_FLAGS_1=0x81 I Qt : qt start W linker : /data/app/org.qtproject.example.collidingmice-2/lib/arm/libcollidingmice.so: unused DT entry: type 0x1d arg 0x2370 I Qt JAVA : DEBUGGER: extra parameters: Bundle[{debug_ping=true, gdbserver_socket=/data/data/org.qtproject.example.collidingmice/debug-socket, gdbserver_command=/data/data/org.qtproject.example.collidingmice/lib/libgdbserver.so --multi +/data/data/org.qtproject.example.collidingmice/debug-socket, ping_socket=org.qtproject.example.collidingmice.ping_pong_socket}] I Qt JAVA : DEBUGGER: removing gdb socket /data/data/org.qtproject.example.collidingmice/debug-socket I Qt JAVA : DEBUGGER: starting /data/user/0/org.qtproject.example.collidingmice/lib/libgdbserver.so --multi +/data/data/org.qtproject.example.collidingmice/debug-socket I Qt JAVA : DEBUGGER: gdbserver started I Qt JAVA : DEBUGGER: waiting for socket at /data/data/org.qtproject.example.collidingmice/debug-socket, attempt 0 I Qt JAVA : DEBUGGER: socket ok I Qt JAVA : DEBUGGER: Waiting for debug socket connect ...
For Gerrit Dashboard: QTCREATORBUG-19199 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
210443,2 | Debugger: Synchronize slave engine inferior setup phases again | 4.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |